api_app_k8/api-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: rest-api-app
spec:
  replicas: 2
  selector: # how to find which pod to manage
    matchLabels:
      app: rest-api-app
  template: # it is a Pod object
    metadata: # give our pods some label so they can be found by deployment
      labels:
        app: rest-api-app
    spec:
      containers:
        - name: rest-api-app
          image: binsabbar/k8s-training-api-app:1
          ports:
            - containerPort: 8080
---
# Volume Mount with Config Example - Comment above and comment out the below:
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: api
#   labels:
#     app: rest-api-app
# spec:
#   replicas: 2
#   selector: 
#     matchLabels:
#       app: rest-api-app
#   template: 
#     metadata:
#       labels:
#         app: rest-api-app
#     spec:
#       volumes:
#         - name: app-config
#           configMap:
#             name: rest-api-app
#             items:
#               - key: custom_greeting.js
#                 path: custom_greeting.js
#       containers:
#         - name: rest-api-app
#           image: binsabbar/k8s-training-api-app:1
#           env:
#             - name: BACKEND_IP
#               valueFrom:
#                 configMapKeyRef:
#                   name: rest-api-app
#                   key: BACKEND_IP
#           ports:
#             - containerPort: 8080
#           volumeMounts:
#             - name: app-config
#               mountPath: /usr/src/app/custom_scripts
