api_app_k8/api-app-Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rest-api-app  
  labels:
    app: rest-api-app
spec:
  containers:
    - name: rest-api-app
      image: api-app:1
      ports:
        - containerPort: 8080
