api_app_k8/api-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: rest-api-app

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: api
# spec:
#   type: ClusterIP
#   ports:
#     - port: 80
#       targetPort: 8080
#   selector:
#     app: rest-api-app
