api_app_k8/api-Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api-app.com
    http:
      paths:
        - path: /api
          backend:
            serviceName: api
            servicePort: 80
